[tool.poetry]
name = "zm-py"
version = "0.5.3"
description = ""
authors = ["Rohan Kapoor <rohan@rohankapoor.com>","Nic Boet <nic@boet.cc>"]
license = "Apache-2.0"

readme = "README.md"

homepage = "https://github.com/rohankapoorcom/zm-py"
repository = "https://github.com/rohankapoorcom/zm-py"

packages = [
    {include = "zoneminder"},
    {include = "tests", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pylint = "^3.0.3"
pydocstyle = "^6.3.0"
mypy = "^1.8.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
colorlog = "^6.8.0"
requests = "^2.31.0"
tox = "^4.11.4"
autopep8 = "^2.0.4"
platformdirs = "<4.0.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | tests/toml-test
)/
'''

[build-system]
requires = ["poetry>=1.7.1"]
build-backend = "poetry.masonry.api"
