[tool.poetry]
name = "zm-py"
version = "0.5.4"
description = "A loose python wrapper around the ZoneMinder REST API."
authors = ["Rohan Kapoor <rohan@rohankapoor.com>"]
maintainers = ["Nic Boet <nic@boet.cc>"]
license = "Apache-2.0"

readme = "README.md"

homepage = "https://github.com/rohankapoorcom/zm-py"
repository = "https://github.com/rohankapoorcom/zm-py"

classifiers= [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Home Automation'
]

packages = [
    {include = "zoneminder"},
    {include = "tests", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.3"
pydocstyle = "^6.3.0"
mypy = "^1.8.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
colorlog = "^6.8.0"
requests = "^2.31.0"
tox = "^4.11.4"
autopep8 = "^2.0.4"
platformdirs = "<4.0.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | tests/toml-test
)/
'''

[tool.mypy]
python_version = 3.11
ignore_errors = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = "homeassistant,tests"
forced_separate = "tests"
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
